log-viewer-service/k8s/ingress-ha-logviewer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ha-logviewer
  namespace: web-ha
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: logviewer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ha-logviewer-svc
            port:
              number: 80
      - path: /logs
        pathType: Prefix
        backend:
          service:
            name: ha-logviewer-svc
            port:
              number: 80
